<resources>
    <string name="app_name">SecureKey</string>
    <string name="userid">Username/Registered E-mail</string>
    <string name="password_hint">Password</string>
    <string name="Login_btn">Login</string>
    <string name="Send_OTP">Send OTP</string>
    <string name="Verify_OTP_Button_hint">Verify OTP</string>
    <string name="Verify_OTP_Button">Verify Using OTP</string>
    <string name="Login_using_OTP">Login Using OTP</string>
    <string name="new_Register">Register New User</string>
    <string name="new_user_E_mail">E-Mail please</string>
    <string name="new_username">New Username</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="unregistered_number">This number is not registered.</string>
    <string name="unregistered_username">This Username is not registered.</string>
    <string name="no_app_warning">No apps have been added with passwords by the user.
                                       Please click the button at the end of page to add one.</string>
    <string name="app_Name">App name please.</string>
    <string name="accept">Accept</string>
    <string name="Regenerate">Regenerate</string>
    <string name="reset_pass">Reset Details</string>

</resources>