<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/app_Name"
        android:inputType="text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/generated_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="password"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/generated_password"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/regenerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="137dp"
            android:layout_toRightOf="@id/accept"
            android:layout_weight="1"
            android:text="@string/Regenerate" />
    </RelativeLayout>

</RelativeLayout>
